--- a/src/Sinedo/Sinedo.csproj
+++ b/src/Sinedo/Sinedo.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="6.0.0" />
     <PackageReference Include="SharpCompress" Version="0.28.3" />
   </ItemGroup>
 
