--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,21 @@
             },
             "runOptions": {
                 "runOn": "folderOpen"
+            },
+            "problemMatcher": {
+                "pattern": {
+                    "regexp": ".",
+                    "file": 1,
+                    "location": 2,
+                    "severity": 3,
+                    "code": 4,
+                    "message": 5
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "^watch :",
+                    "endsPattern": "."
+                }
             }
         },
         {
