Workround für Hot-Reload hinzugefügt.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,12 +13,10 @@
             "isBackground": true,
             "args": [
                 "watch",
-                "run",
-                "--",
-                "-w",
+                "run"
             ],
             "options": {
-                "cwd": "${workspaceFolder}/src/Sinedo/",
+                "cwd": "${workspaceFolder}/src/Sinedo/"
             },
             "runOptions": {
                 "runOn": "folderOpen"
